# test-mlops

./: pyproject.toml
notebooks/: Lectures_Final.html
test-mlops/: train.py
