[tool.poetry]
name = "test-mlops"
version = "0.1.0"
description = "testing poetry functionality"
authors = ["ruslan1007 <nagimov10@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.22.2"
pandas = "1.4.1"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
